style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

html {
  font-size: 100%;
}

body {
	background: #27373a;
  font: 18px/1.4 $helvetica;
  color: #9aaf73;
}

.container {
  margin: 0 auto;
  max-width: 60%;
  padding: 0 1em;
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  font-family: $helveticaNeue;
  color: #59a871;
  font-weight: 300;

  line-height: 1;
  margin: 0.2em 0 0.25em;
  padding: 0;

  @include mobile {
    line-height: 1.4;
  }
}

h1 {
  font-size: 1.7em;
  a {
    color: inherit;
  }
}

h2 {
  font-size: 1.6em;
}

h3 {
  font-size: 1.3em;
}

h4 {
  font-size: 1.2em;
  color: $gray;
}

p {
  margin: 1em 0;
}

a {
  color: $blue;
  text-decoration: none;
	cursor: pointer;
  &:hover, &:active {
    color: $blue;
  }
}

ul, ol {
  margin: 1em 0;
  padding-left: 2em;
}

ul {
  list-style-type: disc;
}

ol {
  list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
  margin: 0;
}

ul ul, ol ul {
  list-style-type: circle;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

img {
  max-width: 100%;
}

// Fixes images in popup boxes from Google Translate
.gmnoprint img {
  max-width: none;
}

.date {
  font-style: italic;
  color: #0f8baa;
  font-size: 0.5em;
}

// Specify the color of the selection
::-moz-selection {
  color: $black;
  background: $lightGray;
}
::selection {
  color: $black;
  background: $lightGray;
}

// Nicolas Gallagher's micro clearfix hack
// http://nicolasgallagher.com/micro-clearfix-hack/
.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

/*********************/
/* LAYOUT / SECTIONS */
/*********************/

//
// .masthead
//

.wrapper-masthead {
  margin-bottom: 2em;
}

.masthead {
  padding: 1em 0;
  border-bottom: 0.05em solid $lightGray;

  @include mobile {
    text-align: center;
  }
}

.site-avatar {
  float: left;
  width: 6%;
  height: 6%;
  margin-right: 0.5em;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }

  img {
    border-radius: 1em;
  }
}

.site-info {
  float: left;

  @include mobile {
    float: none;
    display: block;
    margin: 0 auto;
  }
}

.site-name {
  margin: 0;
  color: #805644;
  cursor: pointer;
  font-family: $helveticaNeue;
  font-weight: 300;
  font-size: 1.8em;
  letter-spacing: 0.025em;
}

.site-description {
  margin: -0.2em 0 0 0;
  color: #997a6d;
  font-size: 1.1em;

  @include mobile {
    margin: 3px 0;
  }
}

nav {
  float: right;
  margin-top: 2em; // @TODO: Vertically middle align
  font-family: $helveticaNeue;
  font-size: 1.1em;

  @include mobile {
    float: none;
    margin-top: 0.2em;
    display: block;
    font-size: 1.2em;
  }

  a {
    margin-left: 20px;
    color: #997a6d;
    text-align: right;
    font-weight: 300;
    letter-spacing: 0.025em;;

    @include mobile {
      margin: 0 10px;
      color: inherit;
    }
  }
}

//
// .main
//

.posts > .post {
  padding-bottom: 2em;
  border-bottom: 0.05em solid $lightGray;
}

.postTag {
  font-size: 0.8em;
  color: #b1998f;
  background-color: #443f3d;
  font-family: Arial, Helvetica, sans-serif;
  letter-spacing: 0.025em;
  padding-left: 0.2em;
  padding-right: 0.2em;
}

.posts > .post:last-child {
  padding-bottom: 1em;
  border-bottom: none;
}

.post {
  blockquote {
    margin: 1.8em .8em;
    border-left: 2px solid $gray;
    padding: 0.1em 1em;
    color: $gray;
    font-size: 22px;
    font-style: italic;
  }

  .comments {
    margin-top: 10px;
  }

  .read-more {
    text-transform: uppercase;
    font-size: 0.8em;
  }
}

.wrapper-footer {
  margin-top: 2em;
  border-top: 0.05em solid #ddd;
  border-bottom: 0.05em solid #ddd;
  background-color: $lightGray;
}

footer {
  padding: 1.5em 0;
  text-align: center;
}

// Settled on moving the import of syntax highlighting to the bottom of the CSS
// ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
@import "highlights";
@import "svg-icons";

